@@ -31,8 +31,10 @@ Other changes
   method, which should be used in new code wherever possible.
 
 * The 'pretty printed' serialisation of ElementTree objects now
-  appends a newline at the end of the document and also inserts
-  newlines between the top-level processing instructions and comments
+  inserts newlines at the root level between processing instructions,
+  comments and the root tag.
+
+* A 'pretty printed' serialisation is now terminated with a newline.
 
 * Second argument to ``lxml.etree.Extension()`` helper is no longer
   required, third argument is now a keyword-only argument ``ns``.
